...
    }

    AboutContent(state = state, onEvent = viewModel::onEvent)
}

object AboutTestTags {
    const val Root = "about:root"
}

@Composable
private fun AboutContent(
    state: AboutState,
    onEvent: (AboutEvent) -> Unit,
...
